--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -14,9 +14,10 @@ dependencies:
   cupertino_icons: ^1.0.8
 
    # Firebase
-  firebase_core: ^2.30.0
-  firebase_auth: ^4.17.0
-  cloud_firestore: ^4.15.0
+  firebase_core: ^2.0.0
+  firebase_auth: ^4.0.0
+  cloud_firestore: ^5.0.0
+  firebase_storage: ^11.0.0
 
 dev_dependencies:
   flutter_test:
